testing request mobile

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <h5 class="text-secondary fw-normal py-2 fst-italic">Uma coleção de projetos nos quais estive envolvido.</h5>
       </div>
       <div data-js="portfolioContainer" class="row mt-5 mx-0 justify-content-center align-items-center">
-        <div class="col-lg-3 col-md-4 col-12 card-wrapper">
+        <div class="projectsContainer col-lg-3 col-md-4  card-wrapper">
           <div class="card mt-4">
-            <img src="images/ecommerce.png" class="img-fluid" alt="portfolio-img">
+            <!-- <img src="images/ecommerce.png" class="img-fluid" alt="portfolio-img"> -->
             <div class="card-body text-center">
               <h6 class="card-title">E-commerce Website</h6>
               <p class="card-text text-secondary">HTML/CSS/JavaScript</p>
@@ -125,26 +125,36 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 card-wrapper">
+        <div class="projectsContainer col-lg-3 col-md-4 card-wrapper">
           <div class="card mt-4">
-            <img src="images/landing-page.jpg" class="img-fluid" alt="portfolio-img">
+            <!-- <img src="images/landing-page.jpg" class="img-fluid" alt="portfolio-img"> -->
             <div class="card-body text-center">
               <h6 class="card-title">Responsive Landing Page</h6>
               <p class="card-text text-secondary">HTML/CSS/Bootstrap</p>
               <div class="icons">
-                <a href="link-do-projeto" target="_blank" title="Link do Projeto">
+                <!-- <a href="link-do-projeto" target="_blank" title="Link do Projeto">
                   <i class="fas fa-external-link-alt"></i>
-                </a>
+                </a> -->
                 <a href="link-do-github" target="_blank" title="Repositório no GitHub">
                   <i class="fab fa-github"></i>
                 </a>
               </div>
+              <p>
+                <a href="#collapseExample" type="button" class="collapseButton btn btn-primary" data-bs-toggle="collapse">
+                 <span class="material-symbols-outlined">expand_more</span>
+                </a>
+              </p>
+              <div class="collapse" id="collapseExample">
+                <div class="card card-body" >
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, neque maiores suscipit reiciendis temporibus non? 
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 card-wrapper">
+        <div class="projectsContainer col-lg-3 col-md-4 card-wrapper">
           <div class="card mt-4">
-            <img src="images/calculator-app.jpg" class="img-fluid" alt="portfolio-img">
+            <!-- <img src="images/calculator-app.jpg" class="img-fluid" alt="portfolio-img"> -->
             <div class="card-body text-center">
               <h6 class="card-title">Calculator App</h6>
               <p class="card-text text-secondary">HTML/CSS/JavaScript</p>
@@ -159,9 +169,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 card-wrapper">
+        <div class="projectsContainer col-lg-3 col-md-4 card-wrapper">
           <div class="card mt-4">
-            <img src="images/blog.jpg" class="img-fluid" alt="portfolio-img">
+            <!-- <img src="images/blog.jpg" class="img-fluid" alt="portfolio-img"> -->
             <div class="card-body text-center">
               <h6 class="card-title">Blog web-Site</h6>
               <p class="card-text text-secondary">HTML/CSS</p>
@@ -177,9 +187,9 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 card-wrapper">
+        <div class="projectsContainer col-lg-3 col-md-4 card-wrapper">
           <div class="card mt-4">
-            <img src="images/react.jpg" class="img-fluid" alt="portfolio-img">
+            <!-- <img src="images/react.jpg" class="img-fluid" alt="portfolio-img"> -->
             <div class="card-body text-center">
               <h6 class="card-title">Task Management App</h6>
               <p class="card-text text-secondary">ReactJS</p>
@@ -194,9 +204,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 card-wrapper">
+        <div class="projectsContainer col-lg-3 col-md-4 card-wrapper">
           <div class="card mt-4">
-            <img src="images/python.jpg" class="img-fluid" alt="portfolio-img">
+            <!-- <img src="images/python.jpg" class="img-fluid" alt="portfolio-img"> -->
             <div class="card-body text-center">
               <h6 class="card-title">Data Visualization</h6>
               <p class="card-text text-secondary">Python/Plotly</p>
