--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="#about">ABOUT</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="#cv">CURRICULUM VITAE</a>
+              <a class="nav-link" href="#cv">CURRICULUM</a>
             </li>
             <li class="nav-item mx-2">
               <a class="nav-link" href="#contact">CONTACT</a>
@@ -123,15 +123,12 @@
       <div class="AboutMe col-9 col-md-5 text-md-end">
         <h5>2016-2019</h5>
         <h5>Ensino superior e a programação</h5>
-        <p class="resume">Após demonstrar um desempenho destacado em Física no ensino médio, iniciei minha jornada na
-          faculdade de Física. Lá, além de aprimorar minhas habilidades acadêmicas, tive a oportunidade única de
-          integrar a física e a computação. Fui convidado a participar da criação de programa capaz de gerar gráficos de
-          raios cósmicos ultra-energéticos.
+        <p class="resume">Enquanto estudante de física no Instituto Federal do Rio de Janeiro, participei ativamente do desenvolvimento de um programa em Java que tinha como propósito modelar as trajetórias de partículas cósmicas. Essa experiência proporcionou-me valiosas contribuições no campo da programação e na compreensão da dinâmica das partículas cósmicas.
         </p>
       </div>
       <div class="col-3 col-md-2 img text-center">
         <img class="rounded-circle border border-5 border-dark-subtle img-fluid"
-          src="images/pexels-nothing-ahead-4494634.jpg" alt="img">
+          src="images/2.jpeg" alt="img">
       </div>
     </div>
     <div class="row justify-content-md-end mt-5 pt-5">
@@ -141,11 +138,7 @@
       <div class="AboutMe col-9 col-md-5">
         <h5>2020-2022</h5>
         <h5>Mestrado e um contato maior com a computação</h5>
-        <p class="resume">Durante meu período de mestrado, vivenciei uma significativa imersão na área de computação,
-          uma vez que minha especialização concentrou-se em computação e informação quântica. Nesse período, estabeleci
-          contato intenso com profissionais que possuíam vasta familiaridade com linguagens de programação e suas
-          aplicações. Foi nesse ambiente estimulante que encontrei motivação para aprofundar meu conhecimento na área,
-          participando ativamente de seminários e palestras.
+        <p class="resume">Mantendo meu interesse pelos computadores, adentrei o mestrado, focando minha especialização em computação quântica e informação. Nesse período, estabeleci contato intenso com profissionais que possuíam vasta familiaridade com linguagens de programação e suas aplicações. Foi nesse ambiente estimulante que encontrei motivação para aprofundar meu conhecimento na área, participando ativamente de seminários e palestras.
         </p>
       </div>
     </div>
@@ -153,9 +146,7 @@
       <div class="AboutMe col-9 col-md-5 text-md-end">
         <h5>2022-Presente</h5>
         <h5>Graduação em Ciencia de dados</h5>
-        <p class="resume">Após concluir o mestrado e adquirir conhecimento em ciência de dados durante participações em
-          palestras, senti-me inspirado a aprender programação e integrar esse conhecimento na análise de dados.
-          Atualmente, estou dedicado aos estudos como estudante de ciência de dados.
+        <p class="resume">Durante uma dessas palestras, fui apresentado à ciência de dados e suas diversas aplicações. Foi nesse momento que, após concluir o mestrado, optei por aprofundar meus estudos nesse campo e ingressar em um curso superior dedicado à área.
         </p>
       </div>
       <div class="col-3 col-md-2 img text-center">
@@ -164,29 +155,22 @@
     </div>
     <div class="row justify-content-md-end mt-5 pt-5">
       <div class="col-3 col-md-2 img text-center">
-        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="images/about-img-4.jpg" alt="img">
+        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="images/react.jpg" alt="img">
       </div>
       <div class="AboutMe col-9 col-md-5">
         <h5>2022-Present</h5>
         <h5>JavaScript e desenvolvimento web</h5>
-        <p class="resume">Ao longo da graduação e após explorar diversas linguagens de programação, percebi que o
-          Javascript e os desafios do desenvolvimento web poderiam auxiliar no desenvolvimento do pensamento
-          computacional necessário para o meu crescimento profissional. Busquei aprofundar meus estudos na linguagem e
-          acabei me apaixonando pelo desenvolvimento web e suas aplicações.
+        <p class="resume">
+          Ao longo da minha formação acadêmica, fui apresentado ao JavaScript e ao desenvolvimento web, o que me impulsionou a concentrar meus últimos anos de estudo na aprofundada compreensão dessa linguagem, bem como na execução de projetos práticos na área.
         </p>
       </div>
     </div>
     <div class="row flex-row-reverse flex-md-row mt-5 pt-5">
       <div class="AboutMe col-9 col-md-5 text-md-end">
         <h5>2024-Futuro</h5>
-        <h5>Compartilhar conhecimento</h5>
+        <h5>Objetivo</h5>
         <p>
-        </p class="resume">Meu objetivo de carreira é unir minha paixão pelo desenvolvimento web com o prazer de
-        ensinar. Como desenvolvedor web, conquistei proficiência em JavaScript e busco não apenas aprimorar minhas
-        habilidades técnicas, mas também compartilhar meu conhecimento com outras pessoas. Estou comprometido em criar
-        soluções web inovadoras e, ao mesmo tempo, inspirar e capacitar outros a trilhar o caminho do desenvolvimento.
-        Busco oportunidades que me permitam contribuir para o crescimento tanto pessoal quanto profissional, através do
-        compartilhamento de conhecimentos no fascinante mundo do desenvolvimento web.
+        </p class="resume">Meu objetivo profissional é evoluir como desenvolvedor web, contribuindo não apenas com ideias em projetos, mas também em conhecimentos aos que dividirem comigo a jornada rumo a exelencia profissional.    
       </div>
       <div class="col-3 col-md-2 img text-center">
         <img class="rounded-circle border border-5 border-dark-subtle img-fluid"
