update button style

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       </div>
       <div class="row pt-4 mt-5">
         <div class="col-12">
-          <form id="contact-form">
+          <form id="form">
             <div class="row d-flex justify-content-center">
               <div class="col-lg-6">
                 <div class="form-floating mb-3">
@@ -342,7 +342,7 @@
                 <label for="floatingMessage" class="px-4">Enter Message*</label>
               </div>
               <div class="col-12 mt-5 d-flex justify-content-center">
-                <button class="btn btn-lg btn-outline-light">SEND MESSAGE</button>
+                <button class="btn btn-lg btn-outline-light sendButton">SEND MESSAGE</button>
               </div>
             </div>
 
