--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     <div class="text-center">
       <h1 class="h1 text-white fw-medium fst-italic">Igor Fonseca</h1>
       <h2 class="display-3 text-white fw-bold">Web developer <br /></h2>
-      <a href="#skills" class=" button btn btn-lg fs-6 fw-medium mt-5 btn-primary p-3" 
-      onmouseover="hoverEffect()" onmouseout="removeHoverEffect()">TELL ME MORE</a>
+      <a href="#" id="tellMeMore" class=" button btn btn-lg fs-6 fw-medium mt-5 btn-primary p-3" 
+      onmouseover= "hoverEffect('tellMeMore')" 
+      onmouseout= "removeHoverEffect('tellMeMore')">TELL ME MORE</a>
     </div>
   </section>
 
