ajuste request versão mobile

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <li class="nav-item mx-2">
               <a class="nav-link" href="#contact">CONTACT</a>
             </li>
-            <li class="iconMoonAndSun nav-item mx-2">
+            <!-- <li class="iconMoonAndSun nav-item mx-2">
               <span style="cursor: pointer; user-select: none;" class="sun material-symbols-outlined">light_mode</span>
               <span style="cursor: pointer; user-select: none;" class="moon material-symbols-outlined hide">dark_mode</span>
-            </li>
+            </li> -->
         </div>
       </div>
       <div data-js="container" class="container containerError">
