ajuste request versão mobile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IgDev</title>
+  <link rel="shortcut icon" href="images/programa.png" type="image/x-icon">
+  <title>Meu Portfólio</title>
 
   <link rel="stylesheet" href="css/style.css" />
 
@@ -61,7 +62,7 @@
     <div class="text-center">
       <h1 class="h1 text-white fw-medium fst-italic">Igor Fonseca</h1>
       <h2 data-js="typing" class="display-3 text-white fw-bold">Web developer</h2>
-      <a href="#" class=" button btn btn-lg fs-6 fw-medium mt-5 btn-primary p-3">TELL ME MORE</a>
+      <a href="#skills" class=" button btn btn-lg fs-6 fw-medium mt-5 btn-primary p-3">TELL ME MORE</a>
     </div>
   </section>
 
@@ -170,7 +171,7 @@
           <h5>2022-Present</h5>
           <h5>JavaScript e desenvolvimento web</h5>
           <p class="resume">
-            Ao longo da minha formação acadêmica, fui apresentado ao JavaScript e ao desenvolvimento web, o que me impulsionou a concentrar meus últimos anos de estudo na aprofundada compreensão dessa linguagem, bem como na execução de projetos práticos na área.
+            Ao longo da minha formação acadêmica, fui apresentado ao JavaScript e ao desenvolvimento web, o que me impulsionou a concentrar meus últimos anos de estudo na linguagem, bem como na execução de projetos práticos na área.
           </p>
         </div>
       </div>
@@ -179,18 +180,20 @@
           <h5>2024-Futuro</h5>
           <h5>Objetivo</h5>
           <p>
-          </p class="resume">Meu objetivo profissional é evoluir como desenvolvedor web, contribuindo não apenas com ideias em projetos, mas também em conhecimentos aos que dividirem comigo a jornada rumo a exelencia profissional.
+          </p class="resume">Busco evoluir profissionalmente como desenvolvedor Full Stack, desempenhando um papel integral que abrange desde o front-end até o back-end, além de manter um aprendizado continuo, afim de integrar os conhecimentos adquiridos em Ciência de Dados no desenvolvimento de aplicações robustas. Meu foco é oferecer soluções eficientes para os desafios tecnológicos contemporâneos.
         </div>
         <div class="col-3 col-md-2 img text-center">
           <img class="rounded-circle border border-5 border-dark-subtle img-fluid"
             src="images/pexels-thirdman-7652180.jpg" alt="img">
+          </div>
         </div>
-      </div>
-      <div class="row justify-content-md-center mt-5 pt-5">
-        <div class="col-3 col-md-2 d-flex justify-content-center hire-text">
-          <h2
+        <div class="row justify-content-md-center mt-5 pt-5">
+          <div class="col-3 col-md-2 d-flex justify-content-center hire-text">
+            <h2
             class="FinalText h4 d-flex justify-content-center align-items-center bg-primary text-white rounded-circle border border-5 border-dark-subtle">
-            Vamos<br>trabalhar<br>juntos?</h2>
+            <img style="width: 100%;" class="rounded-circle border border-0 border-dark-subtle img-fluid"
+              src="images/work.png" alt="img">
+           
         </div>
       </div>
     </section>
@@ -374,12 +377,12 @@
     <div class="container-xxl flex-wrap pt-3 d-flex align-items-center justify-content-between">
       <p style="color: #e6e6e6;">Copyright © 2023 Igor fonseca</p>
       <ul class="social-icons d-flex">
-        <a href="#"
+        <!-- <a href="#"
           class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><small><i
               class="fa-brands fa-twitter"></i></small></a>
         <a href="#"
           class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><small><i
-              class="fa-brands fa-facebook-f"></i></small></a>
+              class="fa-brands fa-facebook-f"></i></small></a> -->
         <a href="#"
           class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><small><i
               class="fa-brands fa-linkedin-in"></i></small></a>
