ajuste download curriculo

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <li>Aprender</li>
             <!-- Add or remove interests as needed -->
           </ul>
-          <a href="assets/Igor FOnseca Curriculo.pdf" download="Igor FOnseca Curriculo.pdf"
+          <a href="Curriculo-Igor.pdf" download="Igor-Fonseca-Curriculo.pdf"
             class="button btn btn-lg fs-6 fw-medium mt-5 btn-primary p-2">Currículo</a>
         </div>
         <div class="col-lg-7 order-lg-1 order-0 mt-5 text-start">
