--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
             src="images/pexels-thirdman-7652180.jpg" alt="img">
           </div>
         </div>
-        <div class="row justify-content-md-center mt-5 pt-5">
-          <div class="col-3 col-md-2 d-flex justify-content-center hire-text">
+        <div class=" row justify-content-md-center mt-5 pt-5">
+          <div class="FinalText col-3 col-md-2 d-flex justify-content-center hire-text">
             <h2
-            class="FinalText h4 d-flex justify-content-center align-items-center bg-primary text-white rounded-circle border border-5 border-dark-subtle">
-            <img style="width: 100%;" class="rounded-circle border border-0 border-dark-subtle img-fluid"
+            class=" h4 d-flex justify-content-center align-items-center bg-primary text-white rounded-circle border border-5 border-dark-subtle">
+            <img style="width: 100%;" class=" rounded-circle border border-0 border-dark-subtle img-fluid"
               src="images/work.png" alt="img">
            
         </div>
